[gd_scene load_steps=3 format=3 uid="uid://wviovmg6oqis"]

[ext_resource type="Script" path="res://ui/item_tooltip.gd" id="1_id2hc"]
[ext_resource type="Texture2D" uid="uid://bp6pr5vb688in" path="res://items/assets/log.tres" id="1_r5h13"]

[node name="ItemTooltip" type="PanelContainer"]
offset_right = 296.0
offset_bottom = 123.0
mouse_filter = 2
script = ExtResource("1_id2hc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/NameContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("1_r5h13")

[node name="ItemName" type="Label" parent="MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Item Name"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemStats" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.784314, 0, 1)
text = "Power: 2
Charisma: -1"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemDescription" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
text = "Placeholder description"
autowrap_mode = 3
